0.9.35
- Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
- Slightly increase pvr osd opacity
- Don't show pvr plot box if unavailable

0.9.34
- New PVR osd info / controls
- New PVR osd guide
- New PVR channel switcher
- Change default setting to use standard labels for add-ons
- Change default setting to use pvr icons without colordiffuse

0.9.33
- Fixed-width text option for Basic and Horizontal Multi
- Make fixed-width basic home menu new default setting
- Fade unfocused list text
- Add tmdb rating
- Add option to disable autoscroll
- Play album
- TMDB
- Bump font weight for unfocused menu

0.9.32
- Fix for skinhelper/listitemhelper imdb rating and votes on tvshows
- Only use star rating for library ratings as db rating might not be imdb
- Add aspectratio flags
- Fix widget limit none

0.9.31
- Hide poster/plot on osd now shows title and infoline
- Weather widget can focus
- Option to show program times instead of genre in PVR guide
- Hide info for single widget if no label available.
- Reconfigure addon info dialog
- Potential fix for sets issue in info dialog
- Fix for lovefilm scroll plus nextaired text colour
- Tweak OSD settings

0.9.30
Stop prompt for installing plugins for info/search lists if disabled/not-installed
 - Change info lists from visibility conditions to include conditions
 - Change search lists from visibility conditions to include conditions
Fix info jumping down on single widget in multiwidget layout
Fix for season view 2

0.9.29
Experimental custom search function
Add clearlogo option to furniture
Fix for season posters
Fix trailer button visibility

0.9.28
Add Tri-Panel view
Add genres and languages furniture option
Fix login screen for light theme
Fix SettingsProfile cut-off text
Fix Autoscroll on single widgets
Simplify some skin settings
Add settings to disable video info dialog lists

0.9.27
Add Settings Widget
Add prefer poster for blur setting

0.9.26
Merge marduk's musicvideo search code