@@ -163,6 +163,10 @@
         <onfocus>SetProperty(SkinHelper.WidgetContainer,5600,Home)</onfocus>
         <onfocus>SetProperty(ListItemHelper.WidgetContainerId,5600,Home)</onfocus>
         <onfocus>ClearProperty(WidgetFocus)</onfocus>
+
+        <onleft condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth)">9999</onleft>
+        <onright condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth) + Control.IsVisible(9999)">9999</onright>
+        <onright condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth) + !Control.IsVisible(9999)">301</onright>
     </include>
 
     <include name="Home_Simple">        
@@ -712,16 +716,46 @@
             <control type="group">
                 <height>70</height>
                 <width>1200</width>
+                <visible>!$EXP[Exp_InfoVisible]</visible>
+                <control type="button" id="9999">
+                    <left>-18</left>
+                    <height>70</height>
+                    <width>70</width>
+                    <onleft>SetFocus(301,9999,absolute)</onleft>
+                    <onright>SetFocus(301,0,absolute)</onright>
+                    <aspectratio>keep</aspectratio>
+                    <texturenofocus colordiffuse="main_fg_30">special://skin/extras/icons/search.png</texturenofocus>
+                    <texturefocus colordiffuse="main_fg_100">special://skin/extras/icons/search.png</texturefocus>
+                    <ondown condition="!String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Settings) + !String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Weather)">3000</ondown>
+                    <ondown condition="String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Settings)">5000</ondown>
+                    <ondown condition="String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Weather)">6000</ondown>
+                    <onfocus>ClearProperty(WidgetFocus,Home)</onfocus>
+                    <onclick>Skin.Reset(SearchTerm)</onclick>
+                    <onclick>Skin.SetString(SearchTerm)</onclick>
+                    <onclick>ActivateWindow(1138)</onclick>
+                    <visible>![[!Control.HasFocus(302) + Container(301).HasPrevious] | [Control.HasFocus(302) + Container(302).HasPrevious]]</visible>
+                    <visible>!Control.HasFocus(302)</visible>
+                </control>
                 <control type="image">
                     <left>-18</left>
                     <height>70</height>
                     <width>70</width>
                     <aspectratio>keep</aspectratio>
-                    <texture colordiffuse="main_fg_30">special://skin/extras/icons/home.png</texture>
+                    <texture colordiffuse="main_fg_30">$INFO[Container(301).ListItem.Icon]</texture>
+                    <visible>![[!Control.HasFocus(302) + Container(301).HasPrevious] | [Control.HasFocus(302) + Container(302).HasPrevious]]</visible>
+                    <visible>Control.HasFocus(302)</visible>
+                </control>
+                <control type="image">
+                    <left>3</left>
+                    <visible>[!Control.HasFocus(302) + Container(301).HasPrevious] | [Control.HasFocus(302) + Container(302).HasPrevious]</visible>
+                    <centertop>55%</centertop>
+                    <width>24</width>
+                    <height>24</height>
+                    <texture flipx="false" colordiffuse="main_fg_30">buttons/spin-left.png</texture>
                 </control>
                 <control type="image">
                     <right>-134</right>
-                    <visible>[!Control.HasFocus(302) + [Container(301).HasNext | Container(301).HasPrevious]] | [Control.HasFocus(302) + [Container(302).HasNext | Container(302).HasPrevious]]</visible>
+                    <visible>[!Control.HasFocus(302) + Container(301).HasNext] | [Control.HasFocus(302) + Container(302).HasNext]</visible>
                     <centertop>55%</centertop>
                     <width>24</width>
                     <height>24</height>
@@ -830,6 +864,10 @@
         <ondown condition="String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Settings)">5000</ondown>
         <ondown condition="String.IsEqual(Container(9989).ListItemAbsolute(0).Property(list),Weather)">6000</ondown>
         <onfocus>ClearProperty(WidgetFocus,Home)</onfocus>
+
+        <onleft condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth)">9999</onleft>
+        <onright condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth) + Control.IsVisible(9999)">9999</onright>
+        <onright condition="!Skin.HasSetting(HomeIcons) + !Skin.HasSetting(HomeTextAutoWidth) + !Control.IsVisible(9999)">301</onright>
     </include>
 
     <include name="Home_Multi_Horizontal">
