@@ -17,5 +17,6 @@
     <color name="HomePanel">e7000000</color>
     <color name="Background">ff000000</color>
     <color name="PosterBack">ff454545</color>
+    <color name="AltPosterBack">1fdedede</color>
 
 </colors>
