@@ -39,6 +39,7 @@
 
     <!-- Backing Panels and Furniture -->
     <color name="PosterBack">ff333333</color>
+    <color name="AltPosterBack">b3181818</color>
 
     <!-- Highlight -->
     <color name="Highlight">ff0385b5</color>
