@@ -2,6 +2,8 @@
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
 - Slightly increase pvr osd opacity
 - Don't show pvr plot box if unavailable
+- Option to disable geometric panels
+- Add search button to fixed width 
 
 0.9.34
 - New PVR osd info / controls
